--- a/src/project/project/components/ProjectList.scss
+++ b/src/project/project/components/ProjectList.scss
@@ -1,108 +1,107 @@
-.project-recent-box {
-    overflow: hidden;
-    background-color: #fff;
-    border-radius: 4px;
-    margin-top: 15px;
 
-    .home-project {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        margin-top: 10px;
-        overflow: hidden;
-        gap: 10px;
-        padding-bottom: 10px;
-        height: 104px;
-        .project-item:hover {
-            border-radius: 4px 4px 0 0;
-            border-bottom: 2px solid var(--thoughtware-blue);
-            transition: 500;
-        }
-
-        .project-item {
-            max-width: 260px;
-            min-width: 204px;
-            flex: 1;
-            padding: 12px;
-            box-sizing: content-box;
-            flex-shrink: 0;
-            border-radius: 4px;
-            cursor: pointer;
-            background-color: var(--thoughtware-gray-600);
-            box-sizing: border-box;
-            border-bottom: 2px solid var(--thoughtware-gray-600);
-            
-            .item-title {
-                margin-bottom: 10px;
-                font-weight: var(--thoughtware-font-weight-bold);
-                display: inline-flex;
-                align-items: center;
-                font-size: 16px;
-                
-                .item-name {
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    max-width: 140px;
-                }
-
-                .project-icon {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 10px;
-                }
-
-                .item-icon {
-                    width: 20px;
-                    height: 20px;
-                    margin-right: 10px;
-                }
-            }
-
-            .item-work {
-                display: flex;
-                gap: 10px;
-            }
-
-            .process-work,
-            .end-work {
-                font-size: 12px;
-                display: inline-flex;
-                width: 100%;
-                justify-content: space-between;
-                height: 30px;
-                line-height: 30px;
-                gap: 5px;
-                .work-label {
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    width: 60px;
-                }
-                .work-num {
-                    width: 25px;
-                }
-            }
-        }
-
-        .ant-empty {
-            width: 100%;
-        }
-    }
-}
-
-.project-tabs-search {
-    margin-top: 10px;
-}
 .project {
-    // padding: var(--thoughtware-padding);;
     overflow: auto;
-    height: calc(100vh - var(--thoughtware-head-height));
+    height: 100vh;
     .ant-avatar {
         width: 16px;
         height: 16px;
     }
+    .project-recent-box {
+        overflow: hidden;
+        background-color: #fff;
+        border-radius: 4px;
+        margin-top: 15px;
     
+        .home-project {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            margin-top: 10px;
+            overflow: hidden;
+            gap: 10px;
+            padding-bottom: 10px;
+            height: 104px;
+            .project-item:hover {
+                border-radius: 4px 4px 0 0;
+                border-bottom: 2px solid var(--thoughtware-blue);
+                transition: 500;
+            }
+    
+            .project-item {
+                max-width: 260px;
+                min-width: 204px;
+                flex: 1;
+                padding: 12px;
+                box-sizing: content-box;
+                flex-shrink: 0;
+                border-radius: 4px;
+                cursor: pointer;
+                background-color: var(--thoughtware-gray-600);
+                box-sizing: border-box;
+                border-bottom: 2px solid var(--thoughtware-gray-600);
+                
+                .item-title {
+                    margin-bottom: 10px;
+                    font-weight: var(--thoughtware-font-weight-bold);
+                    display: inline-flex;
+                    align-items: center;
+                    font-size: 16px;
+                    
+                    .item-name {
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        max-width: 140px;
+                    }
+    
+                    .project-icon {
+                        width: 30px;
+                        height: 30px;
+                        margin-right: 10px;
+                    }
+    
+                    .item-icon {
+                        width: 20px;
+                        height: 20px;
+                        margin-right: 10px;
+                    }
+                }
+    
+                .item-work {
+                    display: flex;
+                    gap: 10px;
+                }
+    
+                .process-work,
+                .end-work {
+                    font-size: 12px;
+                    display: inline-flex;
+                    width: 100%;
+                    justify-content: space-between;
+                    height: 30px;
+                    line-height: 30px;
+                    gap: 5px;
+                    .work-label {
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        width: 60px;
+                    }
+                    .work-num {
+                        width: 25px;
+                    }
+                }
+            }
+    
+            .ant-empty {
+                width: 100%;
+            }
+        }
+    }
+    
+    .project-tabs-search {
+        margin-top: 10px;
+    }
     .project-filter {
         display: flex;
         align-items: center;
@@ -147,67 +146,67 @@
             margin-right: 0;
         }
     }
-    .project-num {
-        font-size: 12px;
-        color: #606060;
-    }
+    // .project-num {
+    //     font-size: 12px;
+    //     color: #606060;
+    // }
     
     
     .project-content {
-        height: calc(100vh - 48px);
+        height: 100%;
         background-color: #fff;
         // padding: 15px;
-        .ant-layout-sider {
-            background-color: #fff;
-            min-height: 100%;
-            border-right: 2px solid var(--thoughtware-gray-200);
-            .project-aside {
-                height: 100%;
-                background:var(--thoughtware-gray);
-                .project-title {
-                    height: 40px;
-                    display: flex;
-                    line-height: 40px;
-                    width: 100%;
-                    justify-content: space-between;
-                    align-items: center;
-                    padding: 0 20px;
-                    font-weight: var(--thoughtware-font-weight-bold);
-                    color: #000;
-                    border-bottom: 1px solid var(--thoughtware-gray-200);
-                }
-                .project-menu {
-                    list-style-type:none;
-                    padding: 0px;
-                    .icon {
-                        margin-right: 10px;
-                    }
-                    li:hover {
-                        background-color: #EDF0F5;
-                    }
-                    .project-menu-submenu {
-                        height: 40px;
-                        display: flex;
-                        line-height: 40px;
-                        padding-left: 40px;
-                        width: 100%;
+        // .ant-layout-sider {
+        //     background-color: #fff;
+        //     min-height: 100%;
+        //     border-right: 2px solid var(--thoughtware-gray-200);
+        //     .project-aside {
+        //         height: 100%;
+        //         background:var(--thoughtware-gray);
+        //         .project-title {
+        //             height: 40px;
+        //             display: flex;
+        //             line-height: 40px;
+        //             width: 100%;
+        //             justify-content: space-between;
+        //             align-items: center;
+        //             padding: 0 20px;
+        //             font-weight: var(--thoughtware-font-weight-bold);
+        //             color: #000;
+        //             border-bottom: 1px solid var(--thoughtware-gray-200);
+        //         }
+        //         .project-menu {
+        //             list-style-type:none;
+        //             padding: 0px;
+        //             .icon {
+        //                 margin-right: 10px;
+        //             }
+        //             li:hover {
+        //                 background-color: #EDF0F5;
+        //             }
+        //             .project-menu-submenu {
+        //                 height: 40px;
+        //                 display: flex;
+        //                 line-height: 40px;
+        //                 padding-left: 40px;
+        //                 width: 100%;
                        
-                        align-items: center;
-                    }
-                    .project-menu-submenu:hover {
-                        cursor: pointer;
-                        color: var(--thoughtware-blue);
-                    }
-                    .project-menu-select {
-                        background-color: var(--thoughtware-gray-400);
-                        border-left: 3px solid var(--thoughtware-blue);
-                    }
-                }
-                .hidden-menu {
-                    display: none;
-                }
-            }
-        }
+        //                 align-items: center;
+        //             }
+        //             .project-menu-submenu:hover {
+        //                 cursor: pointer;
+        //                 color: var(--thoughtware-blue);
+        //             }
+        //             .project-menu-select {
+        //                 background-color: var(--thoughtware-gray-400);
+        //                 border-left: 3px solid var(--thoughtware-blue);
+        //             }
+        //         }
+        //         .hidden-menu {
+        //             display: none;
+        //         }
+        //     }
+        // }
         .ant-row {
             height: 100%;
             overflow: auto;
