--- a/src/version/common/components/VersionLayout.scss
+++ b/src/version/common/components/VersionLayout.scss
@@ -1,5 +1,5 @@
 .version-detail {
-    height: calc(100vh - 48px);
+    height: 100vh;
     .version-detail-content {
         background: #fff;
     }
