--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -1,5 +1,5 @@
 .home {
-    height: calc(100vh - var(--thoughtware-head-height));
+    height: 100vh;
     overflow: auto;
     position: relative;
     z-index: 0;
