--- a/src/project/common/components/ProjectChangeModal.scss
+++ b/src/project/common/components/ProjectChangeModal.scss
@@ -10,10 +10,18 @@
         cursor: pointer;
         .project-text {
             margin: 0 10px;
-
+            min-width: 0;
+            .name {
+                height: 40px;
+                line-height: 40px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
             .type {
                 font-size: 12px;
-                font-weight: 500;
+                font-weight: normal;
+                color: #666;
             }
         }
 
