--- a/src/project/overview/components/DyncmicTimeAxis.scss
+++ b/src/project/overview/components/DyncmicTimeAxis.scss
@@ -1,14 +1,7 @@
 .dyncmic-timeaxis {
-    margin-top: 20px;
+    // margin-top: 20px;
 
-    .dyncmic-timeaxis-title {
-        height: 40px;
-        line-height: 40px;
-        font-weight: 600;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+    
 
     .dyncmic-timeaxis-content {
         margin-top: 15px;
