--- a/src/project/overview/components/Survey.scss
+++ b/src/project/overview/components/Survey.scss
@@ -132,159 +132,15 @@
         }
     }
 
-    .recent-click {
-        margin: 0 auto;
-        margin-top: 25px;
-        background-color: #fff;
-        border-radius: 4px;
-        flex: 1;
-
-        &-title {
-            width: 100%;
+    .log-box {
+        margin-top: 20px;
+        .log-box-title {
             height: 40px;
             line-height: 40px;
-            font-weight: var(--thoughtware-font-weight-bold);
+            font-weight: 600;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            .more:hover {
-                text-decoration: underline;
-            }
-
-            .more {
-                color: var(--thoughtware-blue);
-                margin-left: 10px;
-                cursor: pointer;
-                display: flex;
-                align-items: center;
-            }
-        }
-
-        .project-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-
-            .project-item-content {
-                .content-name {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-        }
-
-        .work-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            gap: 20px;
-
-            .work-left {
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                flex: 1;
-                flex-shrink: 1;
-                min-width: 0;
-                .work-content {
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    .content-name:hover {
-                        cursor: pointer;
-                        color: var(--thoughtware-blue);
-                    }
-
-                    .content-name {
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                        overflow: hidden;
-                    }
-
-                    .content-type {
-                        font-size: 13px;
-                        color: var(--thoughtware-gray-500);
-                    }
-                }
-            }
-
-            .work-project {
-                width: 100px;
-                font-size: 12px;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-
-            .work-status {
-                padding: 2px 3px;
-                background: #e2e1e4;
-                border-radius: 4px;
-                font-size: 10px;
-                width: fit-content;
-                color: #2b333e;
-            }
-
-            .work-status-process {
-                background: #b0d5dfa1;
-                color: #132c33;
-            }
-
-            .work-status-done {
-                background: #dfecd5e3;
-                color: #5e5314;
-            }
-
-            .work-time {
-                text-align: right;
-            }
-        }
-
-        .version-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-
-            .version-content {
-                .content-name {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-        }
-
-        .sprint-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-
-            .sprint-content {
-                .content-name {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-        }
-
-        .item-time {
-            flex: 1;
-            text-align: right;
         }
     }
-
 }
