--- a/src/project/setting/common/components/ProjectSetDetail.scss
+++ b/src/project/setting/common/components/ProjectSetDetail.scss
@@ -1,6 +1,6 @@
 
 .project-set {
-    height: calc(100vh - var(--thoughtware-head-height));
+    height: 100vh;
     .ant-row {
         overflow: auto;
     }
