--- a/src/sprint/common/components/SprintDetailAside.scss
+++ b/src/sprint/common/components/SprintDetailAside.scss
@@ -4,7 +4,7 @@
 
     .ant-layout-sider-children {
         .sprint-aside-content {
-            height: calc(100vh - var(--thoughtware-head-height));
+            height: 100%;
             display: flex;
             flex-direction: column;
             background: var(--thoughtware-gray-600);
