--- a/src/sprint/common/components/SprintLayout.scss
+++ b/src/sprint/common/components/SprintLayout.scss
@@ -1,5 +1,5 @@
 .sprint-detail {
-    height: calc(100vh - 48px);
+    height: 100vh;
     .sprint-detail-content {
         background: #fff;
     }
